--- a/index.html
+++ b/index.html
@@ -719,9 +719,9 @@
           <h3 class="text-white text-lg font-bold mb-4">SUPPORT</h3>
           <ul class="space-y-2">
             <li><a href="../#contact" class="text-gray-300 hover:text-primary">Contact Us</a></li>
-            <li><a href="#" class="text-gray-300 hover:text-primary" id="terms-link">Terms of Service</a></li>
-            <li><a href="#" class="text-gray-300 hover:text-primary" id="refund-policy-link">Refund Policy</a></li>
-            <li><a href="#" class="text-gray-300 hover:text-primary" id="privacy-policy-link">Privacy Policy</a></li>
+            <li><a href="#" class="text-gray-300 hover:text-primary" id="https://bookstermsofservices.growzioworld.com/">Terms of Service</a></li>
+            <li><a href="#" class="text-gray-300 hover:text-primary" id="https://refundpolicy.growzioworld.com/">Refund Policy</a></li>
+            <li><a href="#" class="text-gray-300 hover:text-primary" id="https://privacypolicy.growzioworld.com/">Privacy Policy</a></li>
           </ul>
         </div>
         
