--- a/index.html
+++ b/index.html
@@ -719,9 +719,9 @@
           <h3 class="text-white text-lg font-bold mb-4">SUPPORT</h3>
           <ul class="space-y-2">
             <li><a href="../#contact" class="text-gray-300 hover:text-primary">Contact Us</a></li>
-            <li><a href="#" class="text-gray-300 hover:text-primary" id="https://bookstermsofservices.growzioworld.com/">Terms of Service</a></li>
-            <li><a href="#" class="text-gray-300 hover:text-primary" id="https://refundpolicy.growzioworld.com/">Refund Policy</a></li>
-            <li><a href="#" class="text-gray-300 hover:text-primary" id="https://privacypolicy.growzioworld.com/">Privacy Policy</a></li>
+            <li><a href="https://bookstermsofservices.growzioworld.com/" class="text-gray-300 hover:text-primary">Terms of Service</a></li>
+            <li><a href="https://refundpolicy.growzioworld.com/" class="text-gray-300 hover:text-primary">Refund Policy</a></li>
+            <li><a href="https://privacypolicy.growzioworld.com/" class="text-gray-300 hover:text-primary">Privacy Policy</a></li>
           </ul>
         </div>
         
@@ -736,7 +736,7 @@
       </div>
       
       <div class="border-t border-gray-600 mt-8 pt-8 text-center">
-        <p>© 2025 GROWZIO BOOKS. All rights reserved.</p>
+        <p>© 2025 GROWZIO WORLD. All rights reserved.</p>
       </div>
     </div>
   </footer>
